squished areas on mobile fix

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -8,6 +8,10 @@
   justify-content: space-evenly;
   align-items: center;
 
+  @include respond(phone) {
+    height: 10vh;
+  }
+
   &__links {
     display: flex;
     justify-content: center;
